# Oceans_Ablaze

./: pyproject.toml  tech_notes.md
data/: eras.json
data/units/: patrol_boat.json
data/weapons/: machine_gun_m2.json
game/: app.py  config.py
game/nav/: astar.py  chunks.py  clearance.py  grid.py  hpa.py  planner.py  smooth.py  types.py
